--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
         <div class="row featurette">
           <div class="col-md-12" align="justify">
-            <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Tennis is one of the rare sports that started to be played by both men and women at almost the same time. The first ladies’ tournament was Wimbledon in 1884 and was won by Maud Watson. The prize at that time was 20 guineas, while today, it is around 1.9 million pounds.</p>
+            <h2 class="featurette-heading">First steps for women in tennis</h2>
+            <p class="lead">Tennis is one of the rare sports that started to be played by both men and women at almost the same time. The first ladies’ tournament was Wimbledon in 1884 and was won by Maud Watson. The prize at that time was 20 guineas (21 pounds), while today, it is around 1.9 million pounds.</p>
           </div>
         </div>
         </br>
@@ -98,19 +98,15 @@
 
         <div class="row featurette">
           <div class="col-md-12" align="justify">
-            <h2 class="featurette-heading">Champion's characteristics, <span class="text-muted">in the shoes of...</span></h2>
+            <h2 class="featurette-heading">Winning is not always an option, <span class="text-muted">consistency is</span></h2>
             <p class="lead">Amongst those 2217 players, one special woman appeared on the tennis field. Guess who?!
 The almighty GOAT Serena Williams started her series of 23 Grand Slam titles with a winning in the US Open in 1999 and the rest is history! She clearly dominated the tennis sport. She even won twice a series of 4 tournaments of Grand Slam in 2002/2003 and 2014/2015.</p>
           </div>
         </div>
         </br>
         <div class="row featurette">
-          <div class="col-md-6">
-            <img src='img/Rally_points.JPG' height="100%" width="80%"/>
-          </div>
-          <div class="col-md-4">
-            <img src='img/Winner_types.JPG' height="100%" width="120%"/>
-          </div>
+          <div class="col-md-12">
+            <div class='tableauPlaceholder' id='viz1554817233850' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Graphe3&#47;Feuille2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Graphe3&#47;Feuille2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Graphe3&#47;Feuille2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1554817233850');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>​ </div>
         </div>
 
         <hr class="featurette-divider" id="Graphe2">
@@ -131,14 +127,21 @@ The first breakdown in 2006 is related to a knee injury. The second breakdown in
 
         <div class="row featurette">
           <div class="col-md-12" align="justify">
-            <h2 class="featurette-heading">Winning is not always an option, <span class="text-muted">consistency is...</span></h2>
+            <h2 class="featurette-heading">Champion's characteristics, <span class="text-muted">in the shoes of...</span></h2>
             <p class="lead">She is a right-handed player and plays the backhand with two hands. She measures 1m75 (5 ft 9 in). She has a strong ability to win a point during the three first shots. She is also so strong in tennis serve. In fact, she wins a lot of aces, it is even the double compared to the mean of other female players.</p>
           </div>
         </div>
         </br>
         <div class="row featurette">
-          <div class="col-md-12">
-            <div class='tableauPlaceholder' id='viz1554817233850' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Graphe3&#47;Feuille2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Graphe3&#47;Feuille2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Graphe3&#47;Feuille2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1554817233850');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>​ </div>
+
+          <div class="col-md-6">
+            <img src='img/Rally_points.JPG' height="100%" width="80%"/>
+          </div>
+          <div class="col-md-4">
+            <img src='img/Winner_types.JPG' height="100%" width="120%"/>
+          </div>
+
+
         </div>
 
         <hr class="featurette-divider">
